[package]
name = "rrr"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2-rs = "0.1"
flate2 = "1"

[workspace]
members = ["cli"]

[workspace.package]
version = "0.7.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
