[package]
name = "rrr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rrr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = "0.46"
aws-sdk-s3 = "0.16"
bytes = "1"
clap = "4"
clap_complete = "4"
console = "0.15"
rrr = { path = "..", version = "=0.4.0" }
tokio = { version = "1.14", features = ["full"] } # avoiding RUSTSEC-2021-0124
url = "2"

[target.'cfg(unix)'.dependencies]
pager = "0.16"
which = "4"
