[package]
name = "rrr-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = { version = "0.3", features = ["futures"] }
rrr = { path = "..", version = "=0.9.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "DataTransfer", "Document", "DomTokenList", "Element", "FileList", "DragEvent"] }
yew = { version = "0.20", features = ["csr"] }
